--- a/index.html
+++ b/index.html
@@ -297,15 +297,15 @@
     </div>
   </nav>
 
-  <header class="hero">
-    <img src="clinic background.jpg" alt="Clinic Banner" class="banner-img">
-    <h1>Happy Sprouts</h1>
-    <p>Rooted in Care, Growing with Joy</p>
-    <div class="cta-buttons">
-      <a href="#services" class="btn-primary">Who Can Benefit</a>
-      <a href="#contact" class="btn-primary btn-accent">Get Started</a>
-    </div>
-  </header>
+ <header class="hero">
+  <img src="final logo.png" alt="Happy Sprouts Logo" class="logo">
+  <h1>Happy Sprouts</h1>
+  <p>Rooted in Care, Growing with Joy</p>
+  <div class="cta-buttons">
+    <a href="#services" class="btn-primary">Who Can Benefit</a>
+    <a href="#contact" class="btn-primary btn-accent">Get Started</a>
+  </div>
+</header>
 
   <main>
     <section class="intro-section">
@@ -337,11 +337,11 @@
     <section id="services">
       <h2>What We Offer</h2>
       <div class="services-grid">
-        <div class="service-box"><img src="gait.jpg" alt="Gait"><p>Gait Training</p></div>
+        <div class="service-box"><img src="Speech.png" alt="Speech"><p>Speech Therapy</p></div>
         <div class="service-box"><img src="sensory.jpg" alt="Sensory"><p>Sensory Integration</p></div>
-        <div class="service-box"><img src="delay.jpg" alt="Delay"><p>Developmental Delay</p></div>
+        <div class="service-box"><img src="Occupational.png" alt="Occupational"><p>Occupational Therapy</p></div>
         <div class="service-box"><img src="parent.jpg" alt="Parent"><p>Parent Education</p></div>
-        <div class="service-box"><img src="balance.jpg" alt="Balance"><p>Balance Training</p></div>
+        <div class="service-box"><img src="Play Therapy.png" alt="Balance"><p>Balance Training</p></div>
         <div class="service-box"><img src="Pediatricaqua.jpg" alt="Hydrotherapy"><p>Hydrotherapy</p></div>
       </div>
     </section>
