--- a/index.html
+++ b/index.html
@@ -297,19 +297,36 @@
     </div>
   </nav>
 
- <header class="hero" style="position: relative; padding: 0;">
-  <img src="first background.png" alt="Clinic Banner" class="banner-img" style="width: 100%; height: auto; object-fit: cover; max-height: 600px;">
+ <header class="hero" style="position: relative; height: 600px; overflow: hidden;">
+  <!-- Full-width background image -->
+  <img src="first background.png" alt="Clinic Banner" style="width: 100%; height: 100%; object-fit: cover;">
 
-  <!-- Logo in top-left corner -->
+  <!-- Logo in top-left -->
   <div style="position: absolute; top: 30px; left: 30px; display: flex; align-items: center; gap: 15px;">
-    <img src="final logo.png" alt="Happy Sprouts Logo" style="height: 80px; width: 80px; border-radius: 50%; box-shadow: 0 2px 8px rgba(0,0,0,0.2);">
-    <div style="color: white; font-size: 1.3rem; max-width: 400px; font-weight: 600; background-color: rgba(0,0,0,0.4); padding: 12px 16px; border-radius: 10px;">
-      Helping kids grow stronger, one playful step at a time!<br>
-      Pediatric Physical, Occupational, and Speech Therapy.
-    </div>
+    <img src="final logo.png" alt="Happy Sprouts Logo" style="height: 100px; width: 100px; border-radius: 50%; box-shadow: 0 2px 8px rgba(0,0,0,0.2);">
   </div>
 
-  <!-- CTA buttons centered at bottom of hero -->
+  <!-- Text box over hero -->
+  <div style="
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 30px;
+    border-radius: 16px;
+    color: white;
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: 600;
+    max-width: 600px;
+    line-height: 1.5;
+  ">
+    Helping kids grow stronger, one playful step at a time!<br>
+    Pediatric Physical, Occupational, and Speech Therapy.
+  </div>
+
+  <!-- CTA Buttons at bottom center -->
   <div class="cta-buttons" style="position: absolute; bottom: 30px; left: 50%; transform: translateX(-50%);">
     <a href="#services" class="btn-primary">Who Can Benefit</a>
     <a href="#contact" class="btn-primary btn-accent">Get Started</a>
