--- a/index.html
+++ b/index.html
@@ -252,7 +252,6 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="logo-text">Happy Sprouts</div>
 	<head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -406,13 +405,13 @@
     <section id="team" class="team">
       <h2>Meet Our Team</h2>
       <div class="team-grid">
-        <div><img src="samantha.jpg" alt="Samantha"><p>Samantha Kaye Recla</p></div>
-        <div><img src="jerico.jpg" alt="Jerico"><p>Jerico Ganoza</p></div>
-        <div><img src="clarence.jpg" alt="Clarence"><p>Clarence Micutuan</p></div>
-        <div><img src="yves.jpg" alt="Yves"><p>Yves Pastrano</p></div>
-        <div><img src="babyrose.jpg" alt="Baby Rose"><p>Baby Rose Balansag</p></div>
-        <div><img src="shahannah.jpg" alt="Shahannah"><p>Shahannah Jame Geraldo</p></div>
-        <div><img src="johannah.jpg" alt="Johannah"><p>Johannah Andrea Padillo</p></div>
+        <div><img src="sam.png" alt="Samantha"><p>Samantha Kaye Recla l ADMIN</p></div>
+        <div><img src="jerico.png" alt="Jerico"><p>Jerico Ganoza l CLINICAL DIRECTOR</p></div>
+        <div><img src="clarence.png" alt="Clarence"><p>Clarence Micutuan l SPEECH PATHOLOGIST</p></div>
+        <div><img src="yves.png" alt="Yves"><p>Yves Pastrano l ADMIN</p></div>
+        <div><img src="rose.png" alt="Baby Rose"><p>Baby Rose Balansag I OCCUPATIONAL THERAPIST</p></div>
+        <div><img src="shabee.png" alt="Shahannah"><p>Shahannah Jame Geraldo l PHYSICAL THERAPIST</p></div>
+        <div><img src="johannah.png" alt="Johannah"><p>Johannah Andrea Padillo l CLINICAL DIRECTOR</p></div>
       </div>
     </section>
 
