--- a/index.html
+++ b/index.html
@@ -296,39 +296,47 @@
     </div>
   </nav>
 
- <header class="hero" style="position: relative; height: 600px; overflow: hidden;">
-  <!-- Full-width background image -->
-  <img src="first background.png" alt="Clinic Banner" style="width: 100%; height: 100%; object-fit: cover;">
-
-  <!-- Logo in top-left -->
-  <div style="position: absolute; top: 30px; left: 30px; display: flex; align-items: center; gap: 15px;">
-    <img src="final logo.png" alt="Happy Sprouts Logo" style="height: 100px; width: 100px; border-radius: 50%; box-shadow: 0 2px 8px rgba(0,0,0,0.2);">
-  </div>
-
-  <!-- Text box over hero -->
+ <header class="hero" style="padding: 0; margin: 0;">
+  <!-- Green Header Bar with Logo and Text -->
   <div style="
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.6);
-    padding: 30px;
-    border-radius: 16px;
-    color: white;
-    text-align: center;
-    font-size: 1.4rem;
-    font-weight: 600;
-    max-width: 600px;
-    line-height: 1.5;
+    background-color: #8CC63F;
+    display: flex;
+    align-items: center;
+    padding: 20px 30px;
+    gap: 20px;
+    flex-wrap: wrap;
   ">
-    Helping kids grow stronger, one playful step at a time!<br>
-    Pediatric Physical, Occupational, and Speech Therapy.
+    <!-- Logo -->
+    <img src="final logo.png" alt="Happy Sprouts Logo" style="
+      height: 100px;
+      width: 100px;
+      border-radius: 50%;
+      flex-shrink: 0;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+    ">
+
+    <!-- Text -->
+    <div style="
+      color: white;
+      font-size: 1.5rem;
+      font-weight: bold;
+      max-width: 700px;
+      line-height: 1.4;
+    ">
+      Helping kids grow stronger, one playful step at a time!<br>
+      Pediatric Physical, Occupational, and Speech Therapy.
+    </div>
   </div>
 
-  <!-- CTA Buttons at bottom center -->
-  <div class="cta-buttons" style="position: absolute; bottom: 30px; left: 50%; transform: translateX(-50%);">
-    <a href="#services" class="btn-primary">Who Can Benefit</a>
-    <a href="#contact" class="btn-primary btn-accent">Get Started</a>
+  <!-- Background Image Below the Green Header -->
+  <div style="width: 100%; overflow: hidden;">
+    <img src="first background.png" alt="Clinic Banner" style="
+      width: 100%;
+      height: auto;
+      object-fit: cover;
+      max-height: 500px;
+      display: block;
+    ">
   </div>
 </header>
 
