--- a/index.html
+++ b/index.html
@@ -63,6 +63,25 @@
       text-decoration: none;
       margin-left: 10px;
     }
+	  <header style="display: flex; align-items: center; justify-content: space-between; padding: 10px 30px; background-color: white; box-shadow: 0 2px 4px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 1000;">
+  <!-- LOGO LEFT -->
+  <div style="display: flex; align-items: center;">
+    <img src="final logo.png" alt="Happy Sprouts Logo" style="height: 60px; margin-right: 15px;">
+  </div>
+
+  <!-- NAVIGATION MENU -->
+  <nav style="display: flex; gap: 25px; align-items: center; font-family: 'Poppins', sans-serif; font-weight: 500; font-size: 1rem;">
+    <a href="#about" style="color: #14A3D4; text-decoration: none;">About</a>
+    <a href="#offer" style="color: #14A3D4; text-decoration: none;">What We Offer</a>
+    <a href="#team" style="color: #14A3D4; text-decoration: none;">Our Team</a>
+    <a href="#location" style="color: #14A3D4; text-decoration: none;">Location</a>
+    <a href="#contact" style="color: #14A3D4; text-decoration: none;">Contact</a>
+
+    <a href="tel:0321234567" style="background-color: #00A6E0; color: white; padding: 10px 18px; border-radius: 25px; text-decoration: none;">(032) 123-4567</a>
+    <a href="#review" style="background-color: #8DC63F; color: white; padding: 10px 18px; border-radius: 25px; text-decoration: none;">REVIEW US</a>
+    <a href="#start" style="background-color: #E53935; color: white; padding: 10px 18px; border-radius: 25px; text-decoration: none;">GET STARTED</a>
+  </nav>
+</header>
 
     .call { background-color: var(--primary-color); }
     .review { background-color: var(--secondary-color); }
@@ -312,14 +331,7 @@
     left: 30px;
     z-index: 10;
   ">
-    <img src="final logo.png" alt="Happy Sprouts Logo" style="
-      height: 90px;
-      width: 90px;
-      border-radius: 50%;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-      background-color: white;
-      padding: 5px;
-    ">
+    
   </div>
 
   <!-- Floating Green Text Box -->
