--- a/index.html
+++ b/index.html
@@ -63,25 +63,6 @@
       text-decoration: none;
       margin-left: 10px;
     }
-	  <header style="display: flex; align-items: center; justify-content: space-between; padding: 10px 30px; background-color: white; box-shadow: 0 2px 4px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 1000;">
-  <!-- LOGO LEFT -->
-  <div style="display: flex; align-items: center;">
-    <img src="final logo.png" alt="Happy Sprouts Logo" style="height: 60px; margin-right: 15px;">
-  </div>
-
-  <!-- NAVIGATION MENU -->
-  <nav style="display: flex; gap: 25px; align-items: center; font-family: 'Poppins', sans-serif; font-weight: 500; font-size: 1rem;">
-    <a href="#about" style="color: #14A3D4; text-decoration: none;">About</a>
-    <a href="#offer" style="color: #14A3D4; text-decoration: none;">What We Offer</a>
-    <a href="#team" style="color: #14A3D4; text-decoration: none;">Our Team</a>
-    <a href="#location" style="color: #14A3D4; text-decoration: none;">Location</a>
-    <a href="#contact" style="color: #14A3D4; text-decoration: none;">Contact</a>
-
-    <a href="tel:0321234567" style="background-color: #00A6E0; color: white; padding: 10px 18px; border-radius: 25px; text-decoration: none;">(032) 123-4567</a>
-    <a href="#review" style="background-color: #8DC63F; color: white; padding: 10px 18px; border-radius: 25px; text-decoration: none;">REVIEW US</a>
-    <a href="#start" style="background-color: #E53935; color: white; padding: 10px 18px; border-radius: 25px; text-decoration: none;">GET STARTED</a>
-  </nav>
-</header>
 
     .call { background-color: var(--primary-color); }
     .review { background-color: var(--secondary-color); }
@@ -270,50 +251,26 @@
   </style>
 </head>
 <body>
-  <nav class="navbar">
-	<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy Sprouts | Pediatric Physical Therapy</title>
+  <header style="display: flex; align-items: center; justify-content: space-between; padding: 10px 30px; background-color: white; box-shadow: 0 2px 4px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 1000;">
+  <!-- LOGO LEFT -->
+  <div style="display: flex; align-items: center;">
+    <img src="logo.png" alt="Happy Sprouts Logo" style="height: 60px; margin-right: 15px;">
+  </div>
 
-  <!-- Google Font import -->
-  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
+  <!-- NAVIGATION MENU -->
+  <nav style="display: flex; gap: 25px; align-items: center; font-family: 'Poppins', sans-serif; font-weight: 500; font-size: 1rem;">
+    <a href="#about" style="color: #14A3D4; text-decoration: none;">About</a>
+    <a href="#services" style="color: #14A3D4; text-decoration: none;">What We Offer</a>
+    <a href="#team" style="color: #14A3D4; text-decoration: none;">Our Team</a>
+    <a href="#location" style="color: #14A3D4; text-decoration: none;">Location</a>
+    <a href="#contact" style="color: #14A3D4; text-decoration: none;">Contact</a>
 
-  <style>
-    :root {
-      --primary-color: #14A3D4;
-      --secondary-color: #8CC63F;
-      --accent-color: #EC2930;
-      --light-bg: #f0fafd;
-      --text-color: #333;
-      --font-main: 'Segoe UI', sans-serif;
-    }
-
- {
-      font-family: 'Comic Neue', cursive, sans-serif;
-      font-size: 2.5rem;
-      font-weight: 700;
-      color: var(--secondary-color);
-      letter-spacing: 2px;
-    }
-
-    /* Other styles... */
-  </style>
-</head>
-
-    <div class="nav-links">
-      <a href="#about">About</a>
-      <a href="#services">What We Offer</a>
-      <a href="#team">Our Team</a>
-      <a href="#location">Location</a>
-      <a href="#contact">Contact</a>
-    </div>
-    <div class="nav-buttons">
-      <a href="tel:+63321234567" class="call">(032) 123-4567</a>
-      <a href="#review" class="review">REVIEW US</a>
-      <a href="#contact" class="get-started">GET STARTED</a>
-    </div>
+    <a href="tel:0321234567" style="background-color: #00A6E0; color: white; padding: 10px 18px; border-radius: 25px; text-decoration: none;">(032) 123-4567</a>
+    <a href="#review" style="background-color: #8DC63F; color: white; padding: 10px 18px; border-radius: 25px; text-decoration: none;">REVIEW US</a>
+    <a href="#contact" style="background-color: #E53935; color: white; padding: 10px 18px; border-radius: 25px; text-decoration: none;">GET STARTED</a>
   </nav>
+</header>
+
 
  <header class="hero" style="position: relative; height: 500px; overflow: hidden;">
   <!-- Background Image -->
@@ -353,7 +310,6 @@
     z-index: 5;
   ">
     Helping kids grow stronger, one playful step at a time!<br>
-    Pediatric Physical, Occupational, and Speech Therapy.
   </div>
 </header>
 
