--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     .get-started { background-color: var(--accent-color); }
 
     .hero {
-      background: linear-gradient(135deg, var(--secondary-color) 0%, var(--primary-color) 100%);
-      color: white;
+      background: white;
+      color: #333;
       text-align: center;
       padding: 60px 20px;
     }
@@ -293,24 +293,24 @@
 
   <!-- Floating Green Text Box -->
   <div style="
-    position: absolute;
-    bottom: 40px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #8CC63F;
-    color: white;
-    padding: 25px 30px;
-    border-radius: 30px;
-    font-size: 1.5rem;
-    text-align: center;
-    font-weight: bold;
-    max-width: 800px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-    line-height: 1.4;
-    z-index: 5;
-  ">
-    Helping kids grow stronger, one playful step at a time!<br>
-  </div>
+  position: absolute;
+  bottom: 40px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #8CC63F;
+  color: white;
+  padding: 25px 30px;
+  border-radius: 30px;
+  font-size: 1.5rem;
+  text-align: center;
+  font-weight: bold;
+  max-width: 800px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  line-height: 1.4;
+  z-index: 5;
+">
+  Helping kids grow stronger, one playful step at a time!<br>
+</div>
 </header>
 
   <main>
