--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
   <header style="display: flex; align-items: center; justify-content: space-between; padding: 10px 30px; background-color: white; box-shadow: 0 2px 4px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 1000;">
   <!-- LOGO LEFT -->
   <div style="display: flex; align-items: center;">
-    <img src="logo.png" alt="Happy Sprouts Logo" style="height: 60px; margin-right: 15px;">
+    <img src="final logo.png" alt="Happy Sprouts Logo" style="height: 60px; margin-right: 15px;">
   </div>
 
   <!-- NAVIGATION MENU -->
