--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
       <div class="services-grid">
 		
 		<div class="service-box">
-  <a href="Speech Therapy.html" style="text-decoration: none; color: inherit;">
+  <a href="https://happysprouts.github.io/Speech Therapy.html" style="text-decoration: none; color: inherit;">
     <img src="Speech 2.png" alt="Speech Therapy">
     <p>Speech Therapy</p>
   </a>
@@ -346,21 +346,21 @@
 </div> 
     		
 		<div class="service-box">
-  <a href="Balance.html" style="text-decoration: none; color: inherit;">
+  <a href="https://happysprouts.github.io/Balance.html" style="text-decoration: none; color: inherit;">
     <img src="Play Therapy.png" alt="Balance">
     <p>Balance, Walking & Gait Training</p>
   </a>
 </div> 
 
 	<div class="service-box">
-  <a href="Fine.html" style="text-decoration: none; color: inherit;">
+  <a href="https://happysprouts.github.io/fine.html" style="text-decoration: none; color: inherit;">
     <img src="Finemotor2.png" alt="Balance">
     <p>Fine Motor Skills Development</p>
   </a>
 </div> 
 
 <div class="service-box">
-  <a href="Gross.html" style="text-decoration: none; color: inherit;">
+  <a href="https://happysprouts.github.io/Gross.html" style="text-decoration: none; color: inherit;">
     <img src="Gross 2.png" alt="Balance">
     <p>Gross Motor and Movement Milestones</p>
   </a>
