--- a/index.html
+++ b/index.html
@@ -354,14 +354,14 @@
 
 	<div class="service-box">
   <a href="https://happysprouts.github.io/fine.html" style="text-decoration: none; color: inherit;">
-    <img src="Finemotor2.png" alt="Balance">
+    <img src="Finemotor2.png" alt="Fine">
     <p>Fine Motor Skills Development</p>
   </a>
 </div> 
 
 <div class="service-box">
   <a href="https://happysprouts.github.io/Gross.html" style="text-decoration: none; color: inherit;">
-    <img src="Gross 2.png" alt="Balance">
+    <img src="Gross 2.png" alt="Gross">
     <p>Gross Motor and Movement Milestones</p>
   </a>
 </div> 
