--- a/index.html
+++ b/index.html
@@ -265,9 +265,9 @@
     <a href="#location" style="color: #14A3D4; text-decoration: none;">Location</a>
     <a href="#contact" style="color: #14A3D4; text-decoration: none;">Contact</a>
 
-    <a href="tel:0321234567" style="background-color: #00A6E0; color: white; padding: 10px 18px; border-radius: 25px; text-decoration: none;">(032) 123-4567</a>
+    <a href="tel:0321234567" style="background-color: #00A6E0; color: white; padding: 10px 18px; border-radius: 25px; text-decoration: none;">09618032275</a>
     <a href="#review" style="background-color: #8DC63F; color: white; padding: 10px 18px; border-radius: 25px; text-decoration: none;">REVIEW US</a>
-    <a href="#contact" style="background-color: #E53935; color: white; padding: 10px 18px; border-radius: 25px; text-decoration: none;">GET STARTED</a>
+    <a href="#contact" style="background-color: #E53935; color: white; padding: 10px 18px; border-radius: 25px; text-decoration: none;">BOOK APPOINTMENT</a>
   </nav>
 </header>
 
@@ -331,8 +331,8 @@
       <div class="services-grid">
 		
 		<div class="service-box">
-  <a href="https://happysprouts.github.io/Speech Therapy.html" style="text-decoration: none; color: inherit;">
-    <img src="Speech 2.png" alt="Speech Therapy">
+  <a href="https://happysprouts.github.io/Speech therapy.html" style="text-decoration: none; color: inherit;">
+    <img src="speech 2.png" alt="Speech Therapy">
     <p>Speech Therapy</p>
   </a>
 </div> 
@@ -354,14 +354,14 @@
 
 	<div class="service-box">
   <a href="https://happysprouts.github.io/fine.html" style="text-decoration: none; color: inherit;">
-    <img src="Finemotor2.png" alt="Fine">
+    <img src="finemotor2.png" alt="Fine">
     <p>Fine Motor Skills Development</p>
   </a>
 </div> 
 
 <div class="service-box">
-  <a href="https://happysprouts.github.io/Gross.html" style="text-decoration: none; color: inherit;">
-    <img src="Gross 2.png" alt="Gross">
+  <a href="https://happysprouts.github.io/gross.html" style="text-decoration: none; color: inherit;">
+    <img src="gross 2.png" alt="Gross">
     <p>Gross Motor and Movement Milestones</p>
   </a>
 </div> 
