--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 </div> 
     		
 		<div class="service-box">
-  <a href="https://happysprouts.github.io/Balance.html" style="text-decoration: none; color: inherit;">
+  <a href="https://happysprouts.github.io/balance.html" style="text-decoration: none; color: inherit;">
     <img src="Play Therapy.png" alt="Balance">
     <p>Balance, Walking & Gait Training</p>
   </a>
