--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
   <!-- NAVIGATION MENU -->
   <nav style="display: flex; gap: 25px; align-items: center; font-family: 'Poppins', sans-serif; font-weight: 500; font-size: 1rem;">
-    <a href="#about" style="color: #14A3D4; text-decoration: none;">About</a>
+    <a href="about.html" style="color: #14A3D4; text-decoration: none;">About</a>
     <a href="#services" style="color: #14A3D4; text-decoration: none;">What We Offer</a>
     <a href="#team" style="color: #14A3D4; text-decoration: none;">Our Team</a>
     <a href="#location" style="color: #14A3D4; text-decoration: none;">Location</a>
