--- a/index.html
+++ b/index.html
@@ -448,11 +448,75 @@
       <iframe src="https://www.google.com/maps?q=City+Time+Square,+Basak-Marigondon+Rd,+Lapu-Lapu+City&output=embed"></iframe>
     </section>
 
-    <section id="contact">
-      <h2>Contact Us</h2>
-      <p>Email: <a href="mailto:happysprouts.pt@gmail.com">happysprouts.pt@gmail.com</a></p>
-      <p>Phone: (032) 123-4567</p>
-    </section>
+    <!-- Contact Section -->
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap');
+
+  #contact {
+    font-family: 'Comic Neue', cursive;
+    background: linear-gradient(to right, #d9f9ff, #f0fafd);
+    padding: 40px 20px;
+    text-align: center;
+    border-top: 4px solid #14A3D4;
+  }
+
+  #contact h2 {
+    color: #14A3D4;
+    font-size: 2.2rem;
+    margin-bottom: 15px;
+  }
+
+  .contact-box {
+    max-width: 600px;
+    margin: 0 auto;
+    background-color: white;
+    padding: 30px;
+    border-radius: 20px;
+    box-shadow: 0 6px 12px rgba(0,0,0,0.1);
+  }
+
+  .contact-box p {
+    font-size: 1.1rem;
+    margin: 12px 0;
+    color: #333;
+  }
+
+  .contact-box a {
+    color: #14A3D4;
+    text-decoration: none;
+    font-weight: bold;
+  }
+
+  .contact-icons {
+    margin-top: 20px;
+  }
+
+  .contact-icons a {
+    margin: 0 10px;
+    font-size: 1.8rem;
+    text-decoration: none;
+  }
+
+  .contact-icons a:hover {
+    color: #EC2930;
+  }
+</style>
+
+<section id="contact">
+  <h2>Contact Us</h2>
+  <div class="contact-box">
+    <p>📧 Email: <a href="mailto:happysprouts.pt@gmail.com">happysprouts.pt@gmail.com</a></p>
+    <p>📱 Phone: <a href="tel:09618032275">09618032275</a></p>
+
+    <div class="contact-icons">
+      <p>🌐 Connect with us:</p>
+      <a href="https://www.facebook.com/happysprouts" target="_blank" title="Facebook">📘 Facebook</a>
+      <a href="https://www.instagram.com/happy.sproutss" target="_blank" title="Instagram">📸 Instagram</a>
+      <a href="https://www.tiktok.com/@happy.sproutss" target="_blank" title="TikTok">🎵 TikTok</a>
+    </div>
+  </div>
+</section>
+
   </main>
 
   <footer>
